--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.5",
-    "@react-navigation/stack": "^6.0.10",
-    "react": "17.0.1",
-    "react-native": "0.64.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.8.0",
-    "react-native-vector-icons": "^8.1.0",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.9.1",
+    "@react-native-firebase/auth": "^12.9.1",
+    "@react-native-firebase/database": "^12.9.1",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/stack": "^6.0.10",
     "formik": "^2.2.9",
+    "react": "17.0.1",
+    "react-native": "0.64.1",
     "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.4",
     "react-native-modal": "^12.0.2",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
-
-    "react-native-toast-message": "^1.4.9"
-    
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
+    "react-native-toast-message": "^1.4.9",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
