--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/database": "^12.9.1",
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/stack": "^6.0.10",
+    "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-native": "0.64.1",
